# nim-agent

./: README.md  pyproject.toml
config/: default.toml
src/nim_cli/: __init__.py  __main__.py  cli.py
src/nim_cli/core/: __init__.py  client.py  config.py  errors.py  metrics.py  retry.py  streaming.py
src/nim_cli/ui/: __init__.py  animations.py  input.py  renderer.py  theme.py
