[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nim-cli"
version = "1.0.0"
description = "World-class agentic CLI powered by NVIDIA NIM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "NIM CLI Team" }]
keywords = ["cli", "ai", "llm", "nvidia", "nim", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Typing :: Typed",
]

dependencies = [
    # Core API
    "openai>=1.0.0",
    
    # Performance
    "uvloop>=0.20.0; sys_platform != 'win32'",
    "orjson>=3.10.0",
    
    # UI
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    
    # Resilience
    "tenacity>=8.0.0",
    
    # Configuration
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
nim-cli = "nim_cli.cli:main"

[project.urls]
Homepage = "https://github.com/nim-cli/nim-cli"
Documentation = "https://github.com/nim-cli/nim-cli#readme"
Repository = "https://github.com/nim-cli/nim-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nim_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["nim_cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
